--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ myst-parser = "^3.0.1"
 sphinx-rtd-theme = "^2.0.0"
 sphinx-autobuild = "^2024.9.3"
 sphinx-autoapi = "^3.3.1"
+starlette = "^0.41.0"
 
 [build-system]
 requires = ["poetry-core"]
